--- a/WindowsHelper/WindowsHelper.csproj
+++ b/WindowsHelper/WindowsHelper.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Classes\Apps\Chrome.cs" />
     <Compile Include="Classes\Apps\KakaoTalk.cs" />
     <Compile Include="Classes\Helper\ObjectHelper.cs" />
+    <Compile Include="Classes\InterceptKeys.cs" />
     <Compile Include="Classes\Monitor.cs" />
     <Compile Include="Classes\Win32Interop.WinHandles\Internal\NativeMethods.cs" />
     <Compile Include="Classes\Win32Interop.WinHandles\TopLevelWindowUtils.cs" />
